# aosp_clang_mirror

./: .gitignore  README.md  app.py  pyproject.toml
.github/workflows/: check.yml  clang.yml  clean.yml
src/: aosp.py  error.py  github.py  logger.py  models.py  telegram.py
tests/: test_aosp.py  test_app.py  test_github.py  test_telegram.py
